5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1706_3058.log
== TEST (2019-04-29 19:03:43) 
-- CODE:
ac=int(input())

if (ac<0):
	print("area invalida")
elif (ac=>0 and ac=<100):
	valor=ac*2 + 2
-- ERROR:
File "XXXX", line 5
    elif (ac=>0 and ac=<100):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:03:54) 
-- CODE:
ac=int(input())

if (ac<0):
	print("area invalida")
elif (ac>=0 and ac<=100):
	valor=ac*2 + 2
-- ERROR:
File "XXXX", line 5
    elif (ac=>0 and ac=<100):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:04:24) 
-- CODE:
ac=int(input())

if (ac<0):
	print("area invalida")
elif (ac>=0 and ac<=100):
	valor=ac*2 + 2
	print(valor)
-- ERROR:
File "XXXX", line 5
    elif (ac=>0 and ac=<100):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:04:57) 
-- CODE:
ac=int(input())

if (ac<0):
	print("area invalida")
elif (ac>=0 and ac<=100):
	valor=ac*2 + 100
	print(round(valor,2))
-- ERROR:
File "XXXX", line 5
    elif (ac=>0 and ac=<100):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:05:21) 
-- CODE:
ac=int(input())

if (ac<0):
	print("area invalida")
elif (ac>=0 and ac<=100):
	valor=ac*2 + 100
	print(round(float(valor),2))
-- ERROR:
File "XXXX", line 5
    elif (ac=>0 and ac=<100):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:06:41) 
-- CODE:
ac=int(input())

if (ac<0):
	print("area invalida")
elif (ac>=0 and ac<=100):
	valor=ac*2 + 100
	print(round(float(valor),2))
elif (ac>100 and ac<=2500):
	valor=ac*1.8 + 150
	print(round(float(valor),2))
-- OUTPUT:
375.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:09:44) 
-- CODE:
ac=int(input())

if (ac<0):
	print("area invalida")
elif (ac>=0 and ac<=100):
	valor=ac*2 + 100
	print(round(float(valor),2))
elif (ac>100 and ac<=2500):
	valor=ac*1.8 + 150
	print(round(float(valor),2))
elif (ac>2500 and ac<=10000):
	valor=ac*1.5 + 200
	print(round(float(valor),2))
else:
	valor=ac*1.2 + 250
	print(round(float(valor),2))
-- EXECUTION TIME:
0.120996
-- TEST CASE 1:
---- input:
125
---- correct output:
375.0
---- user output:
375.0
-- TEST CASE 2:
---- input:
15000
---- correct output:
18250.0
---- user output:
18250.0
-- TEST CASE 3:
---- input:
81
---- correct output:
262.0
---- user output:
262.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
